# macropad

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
src/: main.c
